# boids-cpp-simulation

./: .gitignore  CMakeLists.txt  README.md  requirements.md
.claude/: settings.local.json
src/: main.cpp
src/core/: boid.cpp  boid.hpp  flock.cpp  flock.hpp
src/math/: vector_math.hpp
